--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -8,22 +8,28 @@ on:
 jobs:
   build_image:
     runs-on: ubuntu-latest
-    steps:
-      - name: list directory before checkout
-        run: |
-          ls
 
-      - name: checkout repository
+    steps:
+      - name: List directory before checkout
+        run: ls
+
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # - name: build image
-      #   run: |
-      #     docker build -t 17csc028/codeplay .
+      - name: Build Docker image
+        run: |
+          docker build -t 17csc028/codeplay .
 
-      # - name : login  to docker hub
-      #   run: |
-      #     docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD}}
+      - name: Login to Docker Hub
+        run: |
+          docker login -u "${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name :push image to dockerhub
-      #   run: |
-      #     docker push 17csc028/codeplay
+      - name: Push image to Docker Hub
+        run: |
+          docker push 17csc028/codeplay
+
+      - name: SSH into EC2 instance
+        run: |
+          echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
+          chmod 400 codeplaykey.pem
+          ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no codeplaykey.pem ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com "echo 'SSH successful!'"
