--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Login to Docker Hub
         run: |
-          docker login -u "${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push image to Docker Hub
         run: |
