--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -7,12 +7,13 @@ on:
       - configuration
 
 jobs:
- configuration:
-  runs-on: ubuntu-latest
-  if: github.ref_name == 'configuration'
-  steps:
-    - name: SSH into EC2 instance and install docker
-      run: |
+
+  configuration:
+    runs-on: ubuntu-latest
+    if: github.ref_name == 'configuration'
+    steps:
+      - name: SSH into EC2 instance and install docker
+        run: |
           echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
           chmod 400 codeplaykey.pem
           ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com
@@ -22,7 +23,7 @@ jobs:
     if: github.ref_name == 'master'
     steps:
       - name: List directory before checkout
-        run: ls
+        run: ls -a
 
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -44,6 +45,5 @@ jobs:
           echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
           chmod 400 codeplaykey.pem
           ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com
-
 
 # ssh -i "codeplaykey.pem" ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com
