added configure branch

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -23,7 +23,7 @@ jobs:
     if: github.ref_name == 'master'
     steps:
       - name: List directory before checkout
-        run: ls -a
+        run: ls
 
       - name: Checkout repository
         uses: actions/checkout@v4
