--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Push Docker image
         run: docker push 17csc028/codeplay
 
-      - name: SSH into EC2 instance
+      - name: "SSH into EC2 instance"
         run: |
           echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
           chmod 400 codeplaykey.pem
