--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,49 +1,134 @@
-name: "create simple image"
+# name: "create simple image"
 
-on:
-  push:
-    branches:
-      - master
-      - configuration
+# on:
+#   push:
+#     branches:
+#       - master
+#       - configuration
 
-jobs:
- configuration:
-  runs-on: ubuntu-latest
-  if: github.ref_name == 'configuration'
-  steps:
-    - name: SSH into EC2 instance and install docker
-      run: |
-          echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
-          chmod 400 codeplaykey.pem
-          ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com
+# jobs:
+#  configuration:
+#   runs-on: ubuntu-latest
+#   if: github.ref_name == 'configuration'
+#   steps:
+#     - name: SSH into EC2 instance and install docker
+#       run: |
+#           echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
+#           chmod 400 codeplaykey.pem
+#           ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com
 
-  build_image:
-    runs-on: ubuntu-latest
-    if: github.ref_name == 'master'
-    steps:
-      - name: List directory before checkout
-        run: ls
+#   build_image:
+#     runs-on: ubuntu-latest
+#     if: github.ref_name == 'master'
+#     steps:
+#       - name: List directory before checkout
+#         run: ls
 
-      - name: Checkout repository
-        uses: actions/checkout@v4
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
 
-      - name: Build Docker image
-        run: |
-          docker build -t 17csc028/codeplay .
+#       - name: Build Docker image
+#         run: |
+#           docker build -t 17csc028/codeplay .
 
-      - name: Login to Docker Hub
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+#       - name: Login to Docker Hub
+#         run: |
+#           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push image to Docker Hub
-        run: |
-          docker push 17csc028/codeplay
+#       - name: Push image to Docker Hub
+#         run: |
+#           docker push 17csc028/codeplay
 
-      - name: "SSH into EC2 instance"
-        run: |
-          echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
-          chmod 400 codeplaykey.pem
-          ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com
+#       - name: "SSH into EC2 instance"
+#         run: |
+#           echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
+#           chmod 400 codeplaykey.pem
+#           ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com
 
 
 # ssh -i "codeplaykey.pem" ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com
+
+
+
+
+
+
+name: "Create simple image"
+on: 
+    push:
+        branches: 
+        - master
+        - configure
+
+jobs: 
+
+    configuration: 
+        runs-on: ubuntu-latest
+        if: github.ref_name == 'configure'
+        steps: 
+        - name: "SSH into EC2 instance and Install Docker"
+          run: |
+            echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
+            sudo chmod 400 codeplaykey.pem
+            ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com "
+
+            ## install docker 
+            # Add Docker's official GPG key:
+            sudo apt update -y
+            sudo apt install ca-certificates curl -y
+            sudo install -m 0755 -d /etc/apt/keyrings
+            sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+            sudo chmod a+r /etc/apt/keyrings/docker.asc
+
+            # Add the repository to Apt sources:
+            sudo tee /etc/apt/sources.list.d/docker.sources <<EOF
+            Types: deb
+            URIs: https://download.docker.com/linux/ubuntu
+            Suites: $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}")
+            Components: stable
+            Signed-By: /etc/apt/keyrings/docker.asc
+            EOF
+
+            sudo apt update -y
+
+            sudo apt install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
+
+            docker --version
+            "
+
+
+
+    build_image: 
+        runs-on: ubuntu-latest
+        if: github.ref_name == 'master'
+        steps: 
+        - name: "List the directory"
+          run: |
+            ls 
+
+        - name: "checkout from dir"
+          uses: actions/checkout@v4
+
+        - name: "Build the image"
+          run: |
+            docker build -t 17csc028/codeplay .
+          
+        - name: "Login to Docker Hub"
+          run: |
+            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+        - name: "Push image to DockerHub"
+          run: |
+            docker push 17csc028/codeplay
+
+        - name: "SSH into the EC2 instance"
+          run: |
+            echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
+            sudo chmod 400 codeplaykey.pem
+            ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-238-132-160.compute-1.amazonaws.com "
+            
+            sudo docker stop codeplay
+            sudo docker rm --force codeplay
+            sudo docker pull theoafactor/codeplay
+            sudo docker run -d -p 80:80 --name codeplay 17csc028/codeplay
+            "
