--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -129,6 +129,6 @@ jobs:
             
             sudo docker stop codeplay
             sudo docker rm --force codeplay
-            sudo docker pull theoafactor/codeplay
+            sudo docker pull 17csc028/codeplay
             sudo docker run -d -p 80:80 --name codeplay 17csc028/codeplay
             "
