--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -15,7 +15,8 @@ jobs:
           run: |
             echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
             sudo chmod 400 codeplaykey.pem
-            ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ubuntu@ec2-3-235-148-100.compute-1.amazonaws.com "
+            ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ec2-user@ec2-3-238-181-55.compute-1.amazonaws.com "
+
 
             ## install docker 
             # Add Docker's official GPG key:
@@ -70,7 +71,8 @@ jobs:
           run: |
             echo "${{ secrets.SSH_KEY }}" >> codeplaykey.pem
             sudo chmod 400 codeplaykey.pem
-            ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ec2-user@3.238.181.55.compute-1.amazonaws.com "
+            ssh -i "codeplaykey.pem" -o StrictHostKeyChecking=no ec2-user@ec2-3-238-181-55.compute-1.amazonaws.com "
+
             
             sudo docker stop codeplay
             sudo docker rm --force codeplay
